fix overflow in mobile size screen

--- a/style.css
+++ b/style.css
@@ -96,6 +96,13 @@ nav {
   left: 50%;
 }
 
+/* My turn  */
+div.box-container:nth-child(8) > article:nth-child(2) > div:nth-child(1) > a:nth-child(1) > img:nth-child(1)
+
+.box-container img {
+  width: 100%;
+}
+
 /* Form  */
 
 form img {
